welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: ambiguous reference to overloaded definition,
both method growFlowers in class FlowerPot of type ()Unit
and  method growFlowers in class FlowerPot of type ()Unit
match argument types ()
	    growFlowers();
            ^FlowerPot:29: error: method growFlowers is defined twice
  conflicting symbols both originated in file 'plm.runtime39.FlowerPot'
def growFlowers() {
    ^